--- a/index.html
+++ b/index.html
@@ -90,6 +90,16 @@ a.author {
 
                     <h3 class="resume-title">Experience</h3>
                     <div class="resume-item">
+                        <h4>Postdoctoral Researcher, VGG group, Oxford</h4>
+                        <h5>Nov. 2025 - Current </h5>
+                        <p>Advisor: Andrew Zisserman</p>
+                    </div>
+                    <div class="resume-item">
+                        <h4>Postdoctoral Researcher, Multimodal AI Lab, KAIST</h4>
+                        <h5>Sep. 2025 - Nov. 2025 </h5>
+                        <p>Advisor: Joon Son Chung</p>
+                    </div>
+                    <div class="resume-item">
                         <h4>Visiting Student, VGG group, Oxford</h4>
                         <h5>May. 2024 - Nov. 2024</h5>
                         <p>Advisor: Andrew Zisserman</p>
