--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ a.author {
                             장영준
                         </div>
                         <div style="font-size: 14px; margin-bottom:5pt">
-                            Ph.D. Student <br>
-                            School of Electrical Engineering (Division of Future Vehicle), KAIST
+                            Postdoctoral Researcher <br>
+                            VGG, University of Oxford
                         </div>
                         <div style="font-size: 14px; margin-bottom:5pt">
                             <a class="btn btn-outline-dark btn-sm" href="assets/cv/[CV]Youngjoon_Jang.pdf" target="_blank" download>CV</a>
