--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ a.author {
                     <h2>About me</h2>
 
                     <!-- <p>I am a last-year Ph.D. student at KAIST, advised by Professor <a href="http://mm.kaist.ac.kr/joon/" target="_blank">Joon Son Chung</a>. I earned my M.S. supervised by Professor <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en" target="_blank">In So Kweon</a> at KAIST. I was a visiting student at <a href="https://www.robots.ox.ac.uk/~vgg/" target="_blank">VGG Group</a>, University of Oxford, under the supervision of Professor <a href="https://scholar.google.com/citations?user=UZ5wscMAAAAJ&hl=en" target="_blank">Andrew Zisserman</a>. My research aims to effectively train deep neural networks with multi-modality (vision, audio and text). Also, I have an interest in techniques related to sign language for helping deaf people.</p> -->
-                    <p>I am a Postdoctoral Researcher at the <a href="https://www.robots.ox.ac.uk/~vgg/" target="_blank">VGG</a>, University of Oxford, working with Professor <a href="https://scholar.google.com/citations?user=UZ5wscMAAAAJ&hl=en" target="_blank">Andrew Zisserman</a>. I completed my Ph.D. at KAIST under the supervision of Professor <a href="http://mm.kaist.ac.kr/joon/" target="_blank">Joon Son Chung</a>. I also earned my M.S. at KAIST, supervised by Professor <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en" target="_blank">In So Kweon</a>. My research focuses on effectively training deep neural networks across multiple modalities (vision, audio, and text), and I am further interested in techniques related to sign language to support deaf communities.</p>
+                    <p>I am a postdoctoral researcher at <a href="https://www.robots.ox.ac.uk/~vgg/" target="_blank">VGG</a>, University of Oxford, working with Professor <a href="https://scholar.google.com/citations?user=UZ5wscMAAAAJ&hl=en" target="_blank">Andrew Zisserman</a>. I completed my Ph.D. at KAIST under the supervision of Professor <a href="http://mm.kaist.ac.kr/joon/" target="_blank">Joon Son Chung</a>. I also earned my M.S. at KAIST, supervised by Professor <a href="https://scholar.google.com/citations?user=XA8EOlEAAAAJ&hl=en" target="_blank">In So Kweon</a>. My research focuses on effectively training deep neural networks across multiple modalities (vision, audio, and text), and I am further interested in techniques related to sign language to support deaf communities.</p>
 
                     <h3 class="resume-title">Experience</h3>
                     <div class="resume-item">
@@ -177,6 +177,50 @@ a.author {
                 <div class="col-lg-12" style=";">
                     <hr>
                     <h2>Publications</h2>
+
+                    <div class="card mb-4">
+                        <div class="card-header">
+                            <h4 class="card-title mb-0">2026</h4>
+                        </div>
+                        <!-- Publication Item -->
+                        <div class="card-body border-bottom">
+                            <div class="row align-items-center">
+                                <!-- Placeholder for thumbnail -->
+                                <div class="col-md-3 mb-2">
+                                    <div class="pub-thumbnail-image">
+                                        <img src="./assets/thumbs/18_fastav.png" alt="Thumbnail">
+                                    </div>
+                                </div>
+
+                                <!-- Paper info -->
+                                <div class="col-md-9">
+                                    <b>FastAV: Efficient Token Pruning for Audio-Visual Large Language Model Inference</b><br>
+                                    C. Jung, Y. Jang, and J. S. Chung<br>
+                                    ICASSP<br>
+                                    <a href="https://arxiv.org/pdf/2601.13143" class="btn btn-outline-primary btn-sm mt-2">Paper</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card-body border-bottom">
+                            <div class="row align-items-center">
+                                <!-- Placeholder for thumbnail -->
+                                <div class="col-md-3 mb-2">
+                                    <div class="pub-thumbnail-image">
+                                        <img src="./assets/thumbs/19_lpcfm.png" alt="Thumbnail">
+                                    </div>
+                                </div>
+
+                                <!-- Paper info -->
+                                <div class="col-md-9">
+                                    <b>LP-CFM: Perceptual Invariance-Aware Conditional Flow Matching for Speech Modeling</b><br>
+                                    D. Kwak, Y. Jang, and J. S. Chung<br>
+                                    ICASSP<br>
+                                    <a href="https://arxiv.org/pdf/2512.20314" class="btn btn-outline-primary btn-sm mt-2">Paper</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="card mb-4">
                         <div class="card-header">
@@ -559,10 +603,10 @@ a.author {
                     <hr>
                     <h2>Contact</h2>
                     <div class="text-left" style="font-size: 14px; margin-bottom:2pt">
-                        <i class="bi bi-envelope"></i> &ensp; jyj (at) kaist.ac.kr
+                        <i class="bi bi-envelope"></i> &ensp; jyj (at) mmai.io
                     </div>
                     <div class="text-left" style="font-size: 14px; margin-bottom:2pt">
-                        <i class="bi bi-geo-alt"></i> &ensp; Room 3103, N24 (LG Innovation Hall)
+                        <i class="bi bi-geo-alt"></i> &ensp; IEB 25 Banbury Rd, Oxford OX2 6NN
                     </div>
                     <!-- <div class="text-left" style="font-size: 14px; margin-bottom:2pt">
                         <i class="bi bi-telephone"></i> &ensp; optional, otherwise comment out
@@ -573,7 +617,7 @@ a.author {
     </section>
     
     <!-- ======= Footer Section ======= -->
-    <section id="bottom">
+    <!-- <section id="bottom">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12" style=";">
@@ -583,7 +627,7 @@ a.author {
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 <script>
 document.addEventListener("DOMContentLoaded", function () {
