--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ a.author {
                             </div>
                         </div>
 
-                        <div class="card-body border-bottom">
+                        <div class="card-body">
                             <div class="row align-items-center">
                                 <!-- Placeholder for thumbnail -->
                                 <div class="col-md-3 mb-2">
