--- a/index.html
+++ b/index.html
@@ -188,6 +188,25 @@ a.author {
                                 <!-- Placeholder for thumbnail -->
                                 <div class="col-md-3 mb-2">
                                     <div class="pub-thumbnail-image">
+                                        <img src="./assets/thumbs/20_ednet.png" alt="Thumbnail">
+                                    </div>
+                                </div>
+
+                                <!-- Paper info -->
+                                <div class="col-md-9">
+                                    <b>EDNet: A Distortion-Agnostic Speech Enhancement Framework with Gating Mamba Mechanism and Phase Shift-Invariant Training</b><br>
+                                    D. Kwak, Y. Jang, S. Kim, and J. S. Chung<br>
+                                    TASLP<br>
+                                    <a href="https://arxiv.org/pdf/2506.16231" class="btn btn-outline-primary btn-sm mt-2">Paper</a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card-body">
+                            <div class="row align-items-center">
+                                <!-- Placeholder for thumbnail -->
+                                <div class="col-md-3 mb-2">
+                                    <div class="pub-thumbnail-image">
                                         <img src="./assets/thumbs/19_lpcfm.png" alt="Thumbnail">
                                     </div>
                                 </div>
