--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ a.author {
                             VGG, University of Oxford
                         </div>
                         <div style="font-size: 14px; margin-bottom:5pt">
-                            <a class="btn btn-outline-dark btn-sm" href="assets/cv/[CV]Youngjoon_Jang.pdf" target="_blank" download>CV</a>
+                            <a class="btn btn-outline-dark btn-sm" href="assets/cv/[CV]Youngjoon.pdf" target="_blank" download>CV</a>
                             <a class="btn btn-outline-dark btn-sm" href="https://scholar.google.com/citations?user=oB5AOQQAAAAJ&hl=en">Google Scholar</a> 
                             <a class="btn btn-outline-dark btn-sm" href="https://github.com/art-jang">GitHub</a>
                             <a class="btn btn-outline-dark btn-sm" href="https://www.linkedin.com/in/youngjoon-jang-6142241b7/">LinkedIn</a>
